# AppImage-linux-executable

./: CMakeLists.txt  README.md
res/: CMakeLists.txt  QTAppImage-hello-world.desktop  hello-world-appimage.desktop
src/: CMakeLists.txt  main.cpp  my_log.conf
